bat.bool1.icyhot.IcyHot.scala.code
def icyHot(temp1:Int, temp2: Int): Boolean = {
  return true if ((temp1<0 && temp2 >100)||(temps1>100 && temp2 <0))
  else return false
}